# factored-reps

./: .gitignore  README.md  pyproject.toml
experiments/figure_generation/belief-grid/: __init__.py  analysis.py  analysis_parallel.py  data_loader.py  plotting.py  run.py  run_combined.py  run_parallel.py
experiments/figure_generation/figure1/: README.md
experiments/figure_generation/noise/: __init__.py  analysis.py  analysis_parallel.py  functions.py  functions_parallel.py
experiments/figure_generation/orthogonality/: __init__.py  analysis.py  baseline_generator.py  belief_grid_plotting.py  belief_regression.py  data_loader.py  plotting.py  run.py  vary_one_functions.py
experiments/models/: rnn.py
experiments/training/: optimal_loss.py  run.py  utils.py
experiments/training/configs/: repro_chain.yaml  repro_independent.yaml  repro_lstm_32d.yaml  repro_noise_eps_0.001.yaml  repro_noise_eps_0.01.yaml  repro_noise_eps_0.05.yaml  repro_noise_eps_0.1.yaml  repro_noise_eps_0.2.yaml  repro_noise_eps_0.3.yaml  repro_noise_eps_0.5.yaml  repro_noise_eps_0.yaml  repro_rnn_256d.yaml  repro_rnn_32d.yaml  repro_rnn_64d.yaml  repro_transformer_d480.yaml  repro_transformer_nctx101.yaml  repro_transformer_nctx33.yaml
experiments/training/visualization/: __init__.py  _types.py  belief_regression.py  cev.py  configs.py  orthogonality.py  styles.py
takehome/: FINAL_REPORT.md  README.md  reproduce.sh
takehome/analysis/: analyze_geometry.py  extra_analysis.py  run_all_experiments.py  run_datasize_ablation.py  run_experiment6.py
takehome/configs/: main.json  smoke.json
takehome/data/: generate_nonergodic_mess3.py
takehome/results/: analysis_results.json  component_info.json  extra_analysis_results.json
takehome/results/checkpoints/: model_config.json  training_history.json
takehome/results/checkpoints_full/: training_history.json
takehome/train/: train_transformer.py
(+58 files in other folders)
